--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.release>8</maven.compiler.release>
+      <!--  <maven.compiler.release>8</maven.compiler.release> -->
     </properties>
 
     <!--Deployment config for the Maven repository -->
